fixed picture overflowing on large screens

--- a/styles.css
+++ b/styles.css
@@ -555,6 +555,7 @@ header {
 }
 .info img{
     margin-top: 0;
+    max-height: 170px;
 }
 
 footer {
